DBZ-7022 Allow conversion of source block timestamp fields