@@ -94,6 +94,9 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
     private List<String> excludeList;
     private static final String SOURCE = "source";
     private static final String TOPIC = "topic";
+    private static final String FIELD_SOURCE_PREFIX = "source";
+    private static final String FIELD_BEFORE_PREFIX = "before";
+    private static final String FIELD_AFTER_PREFIX = "after";
     private static final Pattern TIMEZONE_OFFSET_PATTERN = Pattern.compile("^[+-]\\d{2}:\\d{2}(:\\d{2})?$");
     private static final Pattern LIST_PATTERN = Pattern.compile("^\\[(source|topic|[\".\\w\\s_]+):([\".\\w\\s_]+(?::[\".\\w\\s_]+)?(?:,|]$))+$");
     private final Map<String, Set<String>> topicFieldsMap = new HashMap<>();
@@ -128,8 +131,6 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         }
 
         Struct value = (Struct) record.value();
-        Schema schema = value.schema();
-
         String table = getTableFromSource(value);
         String topic = record.topic();
 
@@ -307,12 +308,38 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
 
         Struct before = getStruct(value, Envelope.FieldName.BEFORE);
         Struct after = getStruct(value, Envelope.FieldName.AFTER);
+        Struct source = getStruct(value, Envelope.FieldName.SOURCE);
+
+        Set<String> beforeFields = new HashSet<>();
+        Set<String> afterFields = new HashSet<>();
+        Set<String> sourceFields = new HashSet<>();
+
+        if (!fields.isEmpty() && !fields.contains(null)) {
+            for (String field : fields) {
+                if (field.startsWith(FIELD_SOURCE_PREFIX)) {
+                    sourceFields.add(field.substring(FIELD_SOURCE_PREFIX.length() + 1));
+                }
+                else if (field.startsWith(FIELD_BEFORE_PREFIX)) {
+                    beforeFields.add(field.substring(FIELD_BEFORE_PREFIX.length() + 1));
+                }
+                else if (field.startsWith(FIELD_AFTER_PREFIX)) {
+                    afterFields.add(field.substring(FIELD_AFTER_PREFIX.length() + 1));
+                }
+                else {
+                    beforeFields.add(field);
+                    afterFields.add(field);
+                }
+            }
+        }
 
         if (before != null) {
-            handleValueForFields(before, type, fields);
+            handleValueForFields(before, type, beforeFields);
         }
         if (after != null) {
-            handleValueForFields(after, type, fields);
+            handleValueForFields(after, type, afterFields);
+        }
+        if (source != null && !sourceFields.isEmpty()) {
+            handleValueForFields(source, type, sourceFields);
         }
     }
 
@@ -480,7 +507,7 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
             }
         }
         else {
-            handleStructs(value, Type.ALL, table, Set.of(""));
+            handleStructs(value, Type.ALL, table, Collections.emptySet());
         }
     }
 
@@ -490,7 +517,7 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         Set<String> fields = matchFieldsResult.getFields();
 
         if (matchName == null) {
-            handleStructs(value, Type.ALL, table != null ? table : topic, Set.of(""));
+            handleStructs(value, Type.ALL, table != null ? table : topic, Collections.emptySet());
         }
         else if (!fields.contains(null)) {
             handleStructs(value, Type.EXCLUDE, matchName, fields);
@@ -499,7 +526,7 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
 
     private void handleAllRecords(Struct value, String table, String topic) {
         if (!topicFieldsMap.containsKey(topic) && !tableFieldsMap.containsKey(table) && !noPrefixFieldsMap.containsKey(table)) {
-            handleStructs(value, Type.ALL, table != null ? table : topic, Set.of(""));
+            handleStructs(value, Type.ALL, table != null ? table : topic, Collections.emptySet());
         }
     }
 }
